# bookmarkhub

./: .gitignore  pyproject.toml  readme.md
bookmarkhub/: __init__.py  cli.py  db.py  exporter.py  fetchers.py
tests/: test_db.py  test_exporter.py
